--- a/main.yaml
+++ b/main.yaml
@@ -126,6 +126,7 @@
           - git
           - git-lfs
           - golang
+          - graphviz
           - hdparm
           - htop
           - hwinfo
